# 2022-2023-project-3-harfang3d-binding-Project-1-group

./: .gitignore  CMakeLists.txt  README.md
Documents Specifications/: Communication_Plan.md  Functional_Specifications.md  Technical_Specification.md  Technical_Specifications.md
FABGen-master/: bind.py  gen.py  tests.py
FABGen-master/fs_lang_code/: fsharp.py
FABGen-master/lang/: fsharp.py  go.py
FABGen-master/lib/: __init__.py  stl.py
FABGen-master/tests/: arg_out.py  basic_type_exchange.py
Test Plan/: Test_Plan.md
TestFsBind/: CMakeCache.txt  CMakeLists.txt  Makefile  Requirements.sh  Vector2.h  Vector3.h  cmake_install.cmake  vectors.cpp  vectors2.cpp  vectors3.cpp
TestFsBind/CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TestFsBind/CMake/lib/: libTest56.dylib
TestFsBind/FSProject/: HelloWorld.fsproj  Requirements.sh  libvectors2.dylib  test.py  vectors.fs  vectors.fsx
TestFsBind/FSProject/tests/: first.py
TestFsBind/lib/: libTest12.dylib  libvectors.dylib  libvectors2.dylib
TestFsBindMac/: myFunctions.cpp  vectors.cpp
TestFsBindMac/FSProject/: FsharpBindings.fsproj  Helpers.fs  Requirements.sh  Tests.fs  libMyNativeLib.dylib  testVectors.fs  vectors.fs
TestFsBindMac/Vectors/: vectors.cpp  vectors.h
TestFsBindMac/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TestFsBindWin/: vectors.cpp
TestFsBindWin/FSProject/: FsharpBindings.fsproj  (+4 more)
research/: 0.Project Research - starting point.md  1.Client.md  1.Product.md  Note on how to use the templates.md
test_binds/: setup.py  test_bindings.py
(+9 files in other folders)
